Fix menu heading alignment

--- a/components/com-networknt-light-c-blog/components/menu/menu.css
+++ b/components/com-networknt-light-c-blog/components/menu/menu.css
@@ -7,7 +7,7 @@
     padding-bottom:8px;
 }
 .main-menu-title {
-    margin-left: 0px;
+    margin-left: 15px;
     padding-left: 0px;
 }
 
